# Axiom

./: Cargo.toml  grammar.txt  grammar_proposal.txt
axiom-language-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  test.axiom
axiom-language-extension/src/: extension.ts
axiom-language-extension/src/syntax/: axiom.tmGrammar.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/project/: config_file.rs  init.rs  mod.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/src/analyzer/: mod.rs
crates/compiler/src/codegen/: mod.rs
crates/compiler/src/lexer/: mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs
src/: main.rs
src/analyzer/: mod.rs  symbol_table.rs
src/ast/: mod.rs
src/ast/nodes/: assignment.rs  binary.rs  binary_operation.rs  call.rs  declaration.rs  file.rs  function.rs  identifier.rs  if_else.rs  mod.rs  number.rs  parameter.rs  return.rs  scope.rs  ternary.rs  unary.rs
src/codegen/: mod.rs
src/datatype/: mod.rs
src/error/: location.rs  mod.rs
src/lexer/: mod.rs
src/lexer/tests/: common.rs  identifiers.rs  mod.rs  numbers.rs  operators.rs
src/lsp/: message.rs  mod.rs
src/lsp/protocol/: initialize.rs  mod.rs
src/parser/: assignment.rs  bitwise.rs  conditional_or.rs  equality.rs  file.rs  mod.rs  pre_unary.rs  primary.rs  scope.rs  statement.rs  ternary.rs
src/token/: location.rs  mod.rs
src/token/tokens/: identifier.rs  keyword.rs  mod.rs  number.rs  operator.rs  parentheses.rs  punctuation.rs
src/utils/: mod.rs  symbol_table.rs
(+67 files in other folders)
