[workspace]
members = ["crates/cli", "crates/lsp", "crates/compiler"]
resolver = "2"
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.45", features = ["derive"] }
inkwell = { version = "0.7.1", features = ["llvm14-0"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
anyhow = "1.0.99"
toml = "0.9.8"

compiler = {path = "crates/compiler"}
lsp = {path = "crates/lsp"}